[package]
name = "jumpdrive-auth"
version = "2.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["jwt", "passwords", "totp"]
jwt = []
passwords = []
totp = []
test-utils = []

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
chrono = "0.4.23"
base64-url = "2.0.0"
rsa = "0.9.2"
hmac = "0.12.1"
sha2 = { version = "0.10.6", features = ["oid"] }
rand = { version = "0.8.5", features = ["std_rng"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
base32 = "0.4.0"
hmac-sha1 = "0.1.3"
